--- a/templates/verify-mail.hbs
+++ b/templates/verify-mail.hbs
@@ -10,7 +10,7 @@
       <p>Hello {{name}},</p>
       <p>Thank you for registering. Please click the link below to confirm your
         email:</p>
-      <a href='{{verifyEmailAddressUrl}}'>Confirm Email</a>
+      <a href='{{verifyEmailUrl}}'>Confirm Email</a>
       <p>If you didn't register, you can ignore this email.</p>
     </div>
   </body>
