chore (#74): change language invite mail to english

--- a/templates/invitation-email.hbs
+++ b/templates/invitation-email.hbs
@@ -2,23 +2,23 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Lời mời tham gia vào lớp học </title>
+    <title>Invitation to join the class</title>
   </head>
   <body>
-    <p>Xin chào {{name}},</p>
+    <p>Hello {{name}},</p>
 
-    <p>Có một lời mời bạn tham gia vào lớp học
+    <p>You have been invited to join the class
       <b>{{className}}</b>
-      với vai trò
+      as a
       <b>
         {{role}}
       </b></p>
 
-    <p>Click để xác nhận tham gia: <a href='{{inviteLink}}'>Tham gia</a></p>
+    <p>Click to confirm your participation: <a href='{{inviteLink}}'>Join</a></p>
 
-    <p>Nếu bạn không muốn tham gia, vui lòng bỏ qua email này</p>
+    <p>If you do not wish to join, please ignore this email</p>
 
-    <p>Trân trọng,<br />
+    <p>Best regards,<br />
       Learning App Team</p>
   </body>
 </html>
